--- a/whitepaper/revnet.tex
+++ b/whitepaper/revnet.tex
@@ -4,14 +4,11 @@
 \title{RevNets}
 \author{Filip\\ \texttt{f@filip.world}}
 
-% Major WIP. Will get around to this.
-
 \begin{document}
-
 \maketitle
 
 \begin{abstract}
-  RevNets are a new funding model for bootstrapping decentralized networks...
+  Smart contracts have enabled new models for organization and governance, but have in some ways failed to deliver on the promise of truly decentralized coordination. Among other causes, this is often due to the challenge of bootstrapping an organization and its product. The centralized nature of the bootstrapping process often leaves the founding team or core developers with little incentive to distribute power by the time a community has been formed. This leaves both parties worse-off: founders must contend with the day-to-day overhead of running a DAO or a governance system which has little to do with their end product, and participants must contend with the risk of misalignment, rugpulls, and scams. \textbf{RevNets} are a new model for creating, scaling, and operating decentralized networks according to pre-defined tokenomic incentives which align participants and remove the need for governance, freeing founders from day-to-day management and making rugpulls impossible.
 \end{abstract}
 
 \section{Introduction}
@@ -28,11 +25,39 @@ Smart contracts have enabled novel models for organizing, operating, and governi
 
 \section{Mechanism}
 
+Each RevNet has its own token (the \textit{network token}) which represents partial network ownership. Anyone can pay ETH into a network to buy its token (thus joining the network). If the network uses ETH-based accounting, payers receive 1 token per ETH under the network's intial conditions. If the network uses USD-based accounting, they receive 1 token per USD worth of ETH.\footnote{For example, if the ETH price is 1,000 USD, paying 1 ETH into the network will yield 1,000 tokens.}
+
+A RevNet's token issuance evolves over generations which last a pre-defined length of time (28 days, for example). Three parameters determine how its tokens are issued:
+
+\begin{itemize}
+  \item \textbf{The Entry Curve}. The cost to enter the network increases over time, incentivizing people to join sooner. The entry curve defines how much more expensive tokens become each generation. With a 5\% entry curve, 5\% fewer tokens are minted per ETH each generation.
+  \item \textbf{The Exit Curve}. Leaving the network (by burning tokens) reclaims some ETH from the network. The closer an exit curve is to 100\%, the more ETH goes to the last participants to exit, and less ETH goes to the first participants to exit. This incentivizes participants to stay in the network longer. You can visualize and experiment with different exit curves on Desmos.
+  \item \textbf{The Boost}. For a pre-determined length of time (140 days, for example) after a RevNet's creation, a percentage of newly generated tokens are allocated to a specific address. This address could be a developer multisig, a staking rewards contract, an airdrop stockpile, or something else. When the boost period ends, this allocation drops to 0.
+\end{itemize}
+
+Network creators can optionally pre-mint a number of tokens for themselves at the time of the network's creation. RevNets have no owner. Once they are deployed, their parameters are locked in place. Funds can only leave the network when people exit.
+
 \subsection{Entry Curve}
+
 \subsection{Exit Curve}
+
 \subsection{Boost}
 
 \section{Implementation}
+
+Our implementation extends the Juicebox protocol 
+
+\section{Applications}
+
+\subsection{Software}
+
+\subsection{Social Networks}
+
+\section{Miscellanea}
+
+\subsection{Network Token Implementation}
+
+\section{Conclusion}
 
 \bibliographystyle{plain}
 \bibliography{references}
