whitepaper entry curve start

--- a/whitepaper/references.bib
+++ b/whitepaper/references.bib
@@ -1,4 +1,4 @@
-@online{daos,
+@misc{daos,
   author  = {ethereum.org},
   title   = {Decentralized autonomous organizations (DAOs)},
   year    = {2023},
